# psp2sdk

./: .gitignore  .travis.yml  README.md  autogen.sh  mac_install.sh
src/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  autogen.sh  configure.ac  psp2.x
src/cmake/: arm-none-eabi-psp2.cmake  toolchain-arm-none-eabi-psp2.cmake
src/include/: Makefile.am  errno.h  psp2export.s  psp2import.s  psp2moduleinfo.h  psp2types.h  stdio.h
src/include/psp2/: appmgr.h  apputil.h  audioenc.h  audioin.h  audioout.h  camera.h  ctrl.h  display.h  export.s  fpu.h  gxm.h  gxt.h  http.h  import.S  kernel.h  moduleinfo.h  motion.h  net.h  netctl.h  pgf.h  power.h  rtc.h  screenshot.h  sysmodule.h  system_param.h  touch.h  types.h
src/include/psp2/io/: devctl.h  (+7 more)
src/libsysbase/: Makefile.am  abort.c
src/start/: CMakeLists.txt  Makefile.am  crt0.c  psp2.specs  psp2.specs.in  psp2.x
src/stubs/: CMakeLists.txt  Makefile.am
src/stubs/SceAppMgr_stub/: CMakeLists.txt  Makefile.am  SceAppMgrUser_stub.S  SceAppMgr_stub.S
src/stubs/SceAppUtil_stub/: CMakeLists.txt  Makefile.am  SceAppUtil_stub.S
src/stubs/SceAtrac_stub/: CMakeLists.txt  Makefile.am  SceAtrac_stub.S
src/stubs/SceAudioIn_stub/: CMakeLists.txt  Makefile.am  SceAudioIn_stub.S
src/stubs/SceAudio_stub/: CMakeLists.txt  Makefile.am  SceAudio_stub.S
src/stubs/SceAudiodec_stub/: CMakeLists.txt  Makefile.am  SceAudiodecUser_stub.S  SceAudiodec_stub.S
src/stubs/SceAudioenc_stub/: CMakeLists.txt  Makefile.am  SceAudioencUser_stub.S  SceAudioenc_stub.S
src/stubs/SceAvPlayer_stub/: CMakeLists.txt  Makefile.am  SceAvPlayer_stub.S
src/stubs/SceCamera_stub/: CMakeLists.txt  Makefile.am  SceCamera_stub.S
src/stubs/SceClipboard_stub/: CMakeLists.txt  Makefile.am  SceClipboard_stub.S
src/stubs/SceCodecEnginePerf_stub/: CMakeLists.txt  Makefile.am  SceCodecEnginePerf_stub.S
src/stubs/SceCodecEngine_stub/: CMakeLists.txt  Makefile.am  SceCodecEngineUser_stub.S  SceCodecEngine_stub.S
src/stubs/SceCommonDialog_stub/: CMakeLists.txt  Makefile.am  SceCommonDialog_stub.S
src/stubs/SceCoredump_stub/: CMakeLists.txt  Makefile.am  SceCoredumpNounlink_stub.S  SceCoredump_stub.S
src/stubs/SceCtrl_stub/: CMakeLists.txt  Makefile.am  SceCtrl_stub.S
src/stubs/SceDTrace_stub/: CMakeLists.txt  Makefile.am  SceDTrace_stub.S
src/stubs/SceDbg_stub/: CMakeLists.txt  Makefile.am  SceDbg_stub.S
src/stubs/SceDeci4p_stub/: CMakeLists.txt  Makefile.am  SceDeci4pUserp_stub.S
src/stubs/SceDeflt_stub/: CMakeLists.txt  Makefile.am  SceDeflt_stub.S
src/stubs/SceDisplay_stub/: CMakeLists.txt  Makefile.am  SceDisplayUser_stub.S  SceDisplay_stub.S
src/stubs/SceFace_stub/: CMakeLists.txt  Makefile.am  SceFace_stub.S
src/stubs/SceFiber_stub/: CMakeLists.txt  Makefile.am  SceFiber_stub.S
src/stubs/SceFios2_stub/: CMakeLists.txt  Makefile.am  SceFios2_stub.S
src/stubs/SceFios_stub/: Makefile.am  SceFios_stub.S
src/stubs/SceFpu_stub/: CMakeLists.txt  Makefile.am  SceFpu_stub.S
src/stubs/SceGameUpdate_stub/: CMakeLists.txt  Makefile.am  SceGameUpdate_stub.S
src/stubs/SceGxm_stub/: CMakeLists.txt  Makefile.am  SceGxm_stub.S
src/stubs/SceHandwriting_stub/: CMakeLists.txt  Makefile.am  SceHandwriting_stub.S
src/stubs/SceHeap_stub/: CMakeLists.txt  Makefile.am  SceHeap_stub.S
src/stubs/SceHmac_stub/: CMakeLists.txt  Makefile.am  SceHmac_stub.S
src/stubs/SceHttp_stub/: CMakeLists.txt  Makefile.am  SceHttp_stub.S
src/stubs/SceIme_stub/: CMakeLists.txt  Makefile.am  SceIme_stub.S
src/stubs/SceJpegEnc_stub/: CMakeLists.txt  Makefile.am  SceJpegEncUser_stub.S
src/stubs/SceJpeg_stub/: CMakeLists.txt  Makefile.am  SceJpegUser_stub.S
src/stubs/SceKernel_stub/: CMakeLists.txt  Makefile.am  SceCpu_stub.S  SceDebugLed_stub.S  SceDipsw_stub.S  SceIofilemgr_stub.S  SceLibKernel_stub.S  SceModulemgr_stub.S  SceProcessmgr_stub.S  SceStdio_stub.S  SceSysmem_stub.S  SceThreadmgrCoredumpTime_stub.S  SceThreadmgr_stub.S
src/stubs/SceLibKernel_stub/: Makefile.am  SceLibKernel_stub.S
src/stubs/SceLibMonoBridge_stub/: CMakeLists.txt  Makefile.am  SceLibMonoBridge_stub.S
src/stubs/SceLibc_stub/: CMakeLists.txt  Makefile.am  SceLibc_stub.S
src/stubs/SceLibm_stub/: CMakeLists.txt  Makefile.am  SceLibm_stub.S
src/stubs/SceLibstdc++_stub/: CMakeLists.txt  Makefile.am  SceLibstdc++_stub.S  SceLibstdcxx_stub.S
src/stubs/SceLiveArea_stub/: CMakeLists.txt  Makefile.am  SceLiveAreaUtil_stub.S
src/stubs/SceLocationExtension_stub/: CMakeLists.txt  Makefile.am  SceLibLocationExtension_stub.S
src/stubs/SceLocation_stub/: CMakeLists.txt  Makefile.am  SceLibLocation_stub.S
src/stubs/SceMd5_stub/: CMakeLists.txt  Makefile.am  SceMd5_stub.S
src/stubs/SceMotion_stub/: CMakeLists.txt  Makefile.am  SceMotion_stub.S
src/stubs/SceMt19937_stub/: CMakeLists.txt  Makefile.am  SceMt19937_stub.S
src/stubs/SceMusicExport_stub/: CMakeLists.txt  Makefile.am  SceMusicExport_stub.S
src/stubs/SceNearDialogUtil_stub/: CMakeLists.txt  Makefile.am  SceNearDialogUtil_stub.S
src/stubs/SceNearUtil_stub/: CMakeLists.txt  Makefile.am  SceNearUtil_stub.S
src/stubs/SceNetAdhocMatching_stub/: CMakeLists.txt  Makefile.am  SceNetAdhocMatching_stub.S
src/stubs/SceNetCtl_stub/: CMakeLists.txt  Makefile.am  SceNetCtl_stub.S
src/stubs/SceNetDebug_stub/: CMakeLists.txt  Makefile.am  SceNet_stub.S  sceNetEmulationGet_stub.S  sceNetEmulationSet_stub.S
src/stubs/SceNet_stub/: CMakeLists.txt  Makefile.am  SceNet_stub.S
src/stubs/SceNgs_stub/: CMakeLists.txt  Makefile.am  SceNgs_stub.S
src/stubs/SceNpActivity_stub/: CMakeLists.txt  Makefile.am  SceNpActivity_stub.S
src/stubs/SceNpBasic_stub/: CMakeLists.txt  Makefile.am  SceNpBasic_stub.S
src/stubs/SceNpCommerce2_stub/: CMakeLists.txt  Makefile.am  SceNpCommerce2_stub.S
tools/: CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  psp2-fixup-lib.c  psp2-fixup.c
tools/include/: elf.h
tools/psp2-fixup/: CMakeLists.txt  Makefile.am  elf.c  elf_priv.h  elf_psp2.h  info.c  info.h  psp2-fixup.c  rel.c  rel.h  scn.c  scn.h  seg.c  seg.h  stub.c  stub.h
tools/psp2-fixup-lib/: Makefile.am  psp2-fixup-lib.c
(+178 files in other folders)
