# Copyright (C) 2015 PSP2SDK Project
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_include_HEADERS = psp2/export.s psp2/import.S	\
	psp2/moduleinfo.h psp2/types.h psp2/display.h psp2/kernel/processmgr.h \
	psp2/kernel/error.h psp2/audioout.h psp2/audioin.h psp2/audioenc.h psp2/touch.h \
	psp2/screenshot.h psp2/appmgr.h psp2/ctrl.h psp2/system_param.h
