# Copyright (C) 2015 PSP2SDK Project
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

nobase_include_HEADERS = psp2/export.s psp2/import.S	\
	psp2/kernel/error.h psp2/kernel/processmgr.h psp2/kernel/loadcore.h	\
	psp2/kernel/threadmgr.h psp2/audioenc.h psp2/audioin.h psp2/audioout.h	\
	psp2/appmgr.h psp2/apputil.h psp2/camera.h psp2/ctrl.h psp2/display.h	\
	psp2/fpu.h psp2/gxm.h psp2/moduleinfo.h psp2/motion.h psp2/pgf.h	\
	psp2/power.h psp2/rtc.h psp2/screenshot.h psp2/system_param.h	\
	psp2/touch.h psp2/types.h
