# Copyright (C) 2015 PSP2SDK Project
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 2.1 as published by the Free Software Foundation
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

SUBDIRS = SceAppMgr_stub SceAppUtil_stub SceAtrac_stub SceAudio_stub	\
	SceCommonDialog_stub SceDbg_stub SceFios_stub SceGxm_stub	\
	SceHeap_stub SceHmac_stub SceLibKernel_stub SceLibMonoBridge_stub	\
	SceLibc_stub ScePower_stub SceSha_stub SceShutterSound_stub	\
	SceSqlite_stub SceSysmodule_stub
