# Copyright (C) 2015 PSP2SDK Project
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 2.1 as published by the Free Software Foundation
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

SUBDIRS = SceNpUtility_stub SceLiveArea_stub SceTouch_stub SceSsl_stub 	\
	SceSha256_stub SceDisplay_stub SceSha384_stub SceCommonDialog_stub 	\
	ScePgf_stub SceNpBasic_stub SceDbg_stub SceFiber_stub 	\
	SceUlt_stub SceGxm_stub SceMotion_stub SceVideodec_stub 	\
	SceXml_stub SceSqlite_stub SceNpMatching2_stub SceAudiodec_stub 	\
	SceSfmt1279_stub SceSfmt4253_stub SceNet_stub SceAppMgr_stub 	\
	SceKernel_stub SceCamera_stub SceMt19937_stub SceDeci4p_stub 	\
	SceVoice_stub SceSfmt132049_stub SceSfmt216091_stub SceSha1_stub 	\
	SceFpu_stub SceNpManager_stub SceNpScore_stub SceAudioIn_stub 	\
	SceSfmt19937_stub SceLibstdc++_stub SceVoiceQoS_stub SceLibm_stub 	\
	SceSha0_stub SceCodecEngine_stub SceAudioenc_stub SceSfmt11213_stub 	\
	SceSha512_stub SceSfmt2281_stub SceJpeg_stub SceHttp_stub 	\
	SceJpegEnc_stub SceSfmt86243_stub SceSysmodule_stub ScePerf_stub 	\
	SceSfmt44497_stub SceSystemGesture_stub SceSha224_stub SceIme_stub 	\
	SceDeflt_stub SceNetCtl_stub SceNpCommon_stub ScePhotoExport_stub 	\
	SceAudio_stub SceLocation_stub SceSfmt607_stub SceLibc_stub 	\
	SceFios2_stub SceRtc_stub SceSas_stub SceScreenShot_stub 	\
	SceMd5_stub SceCtrl_stub SceAppUtil_stub 