# Copyright (C) 2015 PSP2SDK Project
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

SUBDIRS = SceNpUtility_stub SceHmac_stub SceCodecEnginePerf_stub SceLiveArea_stub 	\
	SceTouch_stub SceSsl_stub SceSha256_stub SceDisplay_stub 	\
	SceSha384_stub SceCommonDialog_stub ScePgf_stub SceNpBasic_stub 	\
	SceDbg_stub SceFiber_stub SceUlt_stub SceNearDialogUtil_stub 	\
	SceLocationExtension_stub SceHeap_stub SceNetDebug_stub SceNgs_stub 	\
	SceGxm_stub ScePvf_stub SceAvPlayer_stub SceMotion_stub 	\
	SceVideodec_stub SceXml_stub SceHandwriting_stub ScePspnetAdhoc_stub 	\
	SceSqlite_stub SceNpMatching2_stub SceAudiodec_stub SceSfmt1279_stub 	\
	SceSfmt4253_stub SceNet_stub SceSulpha_stub SceAppMgr_stub 	\
	SceMusicExport_stub SceKernel_stub SceRudp_stub SceCamera_stub 	\
	SceGameUpdate_stub SceNetAdhocMatching_stub SceMt19937_stub SceDeci4p_stub 	\
	SceVoice_stub SceRazorCapture_stub SceNpMessage_stub SceSfmt132049_stub 	\
	SceSfmt216091_stub SceNpSnsFacebook_stub SceSha1_stub SceFpu_stub 	\
	SceNpManager_stub SceNpScore_stub SceNpSignaling_stub SceAudioIn_stub 	\
	SceSfmt19937_stub SceNpTrophy_stub SceNpCommerce2_stub SceLibstdc++_stub 	\
	SceVoiceQoS_stub SceLibm_stub SceShutterSound_stub SceNearUtil_stub 	\
	SceSha0_stub SceCodecEngine_stub ScePower_stub SceAudioenc_stub 	\
	SceSfmt11213_stub SceSha512_stub SceSfmt2281_stub SceJpeg_stub 	\
	SceHttp_stub SceJpegEnc_stub SceCoredump_stub SceNpActivity_stub 	\
	SceSfmt86243_stub SceSysmodule_stub ScePerf_stub SceSfmt44497_stub 	\
	SceSystemGesture_stub SceSha224_stub SceNpParty_stub SceIme_stub 	\
	SceDeflt_stub SceSmart_stub SceNetCtl_stub SceNpCommon_stub 	\
	SceDTrace_stub ScePhotoExport_stub SceAudio_stub SceLocation_stub 	\
	SceFace_stub SceSfmt607_stub SceLibc_stub SceClipboard_stub 	\
	SceFios2_stub SceAtrac_stub SceRtc_stub SceSas_stub 	\
	SceScreenShot_stub SceRazorHud_stub SceSha512t_stub SceMd5_stub 	\
	SceNpTus_stub SceCtrl_stub SceAppUtil_stub
